--- a/Mango.Web/Views/Coupon/CouponIndex.cshtml
+++ b/Mango.Web/Views/Coupon/CouponIndex.cshtml
@@ -1,5 +1,9 @@
 ﻿@model IEnumerable<CouponDto>
 
+@{
+    ViewData["Title"] = "Coupon";
+}
+
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient ml-0 py-3">
         <div class="row">
@@ -43,7 +47,7 @@
                         <td>@item.MinAmount.ToString("C2")
                         </td>
                         <td>
-                            <a class="btn btn-danger">
+                            <a asp-action="CouponDelete" asp-route-couponId="@item.CouponId" class="btn btn-danger">
                                 <i class="bi bi-trash"></i>
                             </a>
                         </td>
