--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -31,6 +31,7 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-controller="Coupon" asp-action="CouponIndex">Coupons</a></li>
                                 <li><a class="dropdown-item" asp-controller="Product" asp-action="ProductIndex">Products</a></li>
+                                <li><a class="dropdown-item" asp-controller="Cart" asp-action="CartIndex">Shopping Cart</a></li>
                             </ul>
                         </li>
                     </ul>
