--- a/Mango.Web/Views/Shared/_Layout.cshtml
+++ b/Mango.Web/Views/Shared/_Layout.cshtml
@@ -31,8 +31,12 @@
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-controller="Coupon" asp-action="CouponIndex">Coupons</a></li>
                                 <li><a class="dropdown-item" asp-controller="Product" asp-action="ProductIndex">Products</a></li>
-                                <li><a class="dropdown-item" asp-controller="Cart" asp-action="CartIndex">Shopping Cart</a></li>
                             </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-controller="Cart" asp-action="CartIndex">
+                                &nbsp; <i class="bi bi-cart"></i>&nbsp;
+                            </a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
