--- a/Mango.Web/Views/Cart/CartIndex.cshtml
+++ b/Mango.Web/Views/Cart/CartIndex.cshtml
@@ -82,7 +82,7 @@
                     <button asp-action="EmailCart" type="submit" class="btn btn-outline-danger form-control">Email Cart</button>
                 </div>
                 <div class="col-6 col-md-3 offset-md-6">
-                    <button disabled class="btn btn-success form-control">Checkout (Comming Soon!)</button>
+                    <button disabled class="btn btn-success form-control">Checkout (Coming Soon!)</button>
                 </div>
             </div>
         </div>
