--- a/Mango.Web/Views/Cart/Checkout.cshtml
+++ b/Mango.Web/Views/Cart/Checkout.cshtml
@@ -7,23 +7,17 @@
                 <span style="font-size:25px;" class="text-warning mb-2">Order Summary</span>
             </div>
             <div class="col-md-5 col-12">
-                <a class="btn btn-outline-warning form-control">Back to Cart</a>
+                <a asp-action="CartIndex" class="btn btn-outline-warning form-control">Back to Cart</a>
             </div>
             <br /><br /><br />
             <hr />
             <div class="col-7">
                 <div class="row pt-2">
                     <div class="col-12 py-2">
-                        <input placeholder="first name..." class="form-control" />
+                        <input value="@ViewData["Name"]" placeholder="Name..." class="form-control" disabled />
                     </div>
                     <div class="col-12 py-2">
-                        <input placeholder="last name..." class="form-control" />
-                    </div>
-                    <div class="col-12 py-2">
-                        <input placeholder="email..." class="form-control" />
-                    </div>
-                    <div class="col-12 py-2">
-                        <input class="form-control" placeholder="phone number..." />
+                        <input value="@ViewData["Email"]" placeholder="Email..." class="form-control" disabled />
                     </div>
                     <div class="col-12 pt-2">
                         <label class="col-form-label">Order will be ready in 30minutes after placing order. If you place order when restaurant is closed it will be ready next day.</label>
@@ -49,26 +43,31 @@
                             </div>
                         </div>
                         <hr />
+                        @foreach (var item in Model.CartDetails)
+                        {
+                            <div class="row h-100">
+                                <div class="col-6">
+                                    <span style="font-size:20px">@item.Product.Name</span>
+                                </div>
 
-                        <div class="row h-100">
-                            <div class="col-6">
-                                <span style="font-size:20px">Name</span>
-                            </div>
+                                <div class="col-3" style="font-size:11px;">
+                                    <span style="font-size:17px;">@item.Product.Price.ToString("C2")</span>
 
-                            <div class="col-3" style="font-size:11px;">
-                                <span style="font-size:17px;"> Price</span>
-
+                                </div>
+                                <div class="col-3" style="font-size:11px;">
+                                    <span style="font-size:17px;">@item.Count</span>
+                                </div>
                             </div>
-                            <div class="col-3" style="font-size:11px;">
-                                <span style="font-size:17px;"> Count</span>
-                            </div>
-                        </div>
+                        }
                         <hr />
 
                         <div class="row">
                             <div class="col-12 text-center pr-4 text-danger">
-                                Order Total :  $$ <br />
-                                <span class="text-success"> Order Discount :  $$</span>
+                                Order Total : @Model.CartHeader.CartTotal.ToString("C2")<br />
+                                @if (Model.CartHeader.Discount > 0)
+                                {
+                                    <span class="text-success"> Order Discount : @Model.CartHeader.Discount.ToString("C2")</span>
+                                }
                             </div>
                         </div>
 
